kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auraconnect
  labels:
    name: auraconnect
    environment: production
